# cd3d10_d3d11_d3d12_dxgi_opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  用NV_DX_interop扩展让D3D和OpenGL共享资源.pptx
1、IDXGISwapChain/: Project1.sln
1、IDXGISwapChain/Project1/: Project1.vcxproj  main.cpp
2、D3D11_OpenGL/D311_OpenGL/: D311_OpenGL.sln
D3D11DEMO/: D3D11DEMO2.sln
D3D11DEMO/D3D11DEMO2/: D3D11DEMO2.vcxproj  D3D11DEMO2.vcxproj.filters
OpenGLAPI/: opengl_demo.ipynb
OpenGL_Hook/: capture_hook.sln  capture_window.sln
OpenGL_Hook/capture_window/: capture.h  capture_window.vcxproj  capture_window.vcxproj.filters  ccapture_hook.cpp  ccapture_hook.h  cd3dxx.h  d3d10-capture.cpp  d3d11-capture.cpp  d3d12-capture.cpp  d3d9-capture.cpp  d3d9-patches.hpp  dxgi-capture.cpp  gl-capture.c  gl-capture.h  gl-decs.h
OpenGL_Hook/input_device_driver/: cinput_device_driver.h  input_device_driver.vcxproj  input_device_driver.vcxproj.filters
OpenGL_Hook/shared_handler/: gl-decs.h  shared_handler.c  shared_handler.h
RenderOffScreen/: RenderOffScreen.sln
RenderOffScreen/RenderOffScreen/: RenderOffScreen.vcxproj  main.cpp
RenderOffScreen/RenderOffScreen_demo2/: RenderOffScreen_demo2.vcxproj  main.cpp
Vulkan/StreamRtcDemo/: StreamRtcDemo.sln
Win32CaptureSample/Win32CaptureSample/: App.cpp  App.h  SimpleCapture.cpp  SimpleCapture.h  Win32CaptureSample.vcxproj  Win32CaptureSample.vcxproj.filters  cmediasoup_mgr.h  cwindow_capture.cpp  cwindow_capture.h  cwindow_util.h  main.cpp
audio_capture/: audio_capture.cpp  audio_capture.h
cuda/cuda/: cuda.sln
cuda/cuda/cuda/: main.cpp  (+3 more)
desktop_capture/: desktop_capture.cpp  desktop_capture.h  desktop_capture_source.cpp  desktop_capture_source.h
injector_demo/: injector_demo.sln
injector_demo/injector_demo/: hook_main.cpp  injector_demo.vcxproj  injector_demo.vcxproj.filters  main.cpp
track_capture/: ctrack_capture.cpp  ctrack_capture.h
vcm_capture/: vcm_capturer.cpp  vcm_capturer.h
video_render/: cvideo_render.cpp  cvideo_render.h  cvideo_render_factory.cpp  cvideo_render_factory.h  d3d_renderer.cpp  d3d_renderer.h
(+46 files in other folders)
